# contrib

./: CMakeLists.txt  Dockerfile  License.txt  README.md  macros.cmake
libraries.cmake/: boost.cmake  bzip2.cmake  coinor.cmake  eigen.cmake  glpk.cmake  gsl.cmake  kissfft.cmake  seqan.cmake  sqlite.cmake  wildmagic.cmake  xercesc.cmake  zlib.cmake
patches/coinor/: Cbc.configure.diff  Cgl.configure.diff  Clp.configure.diff  CoinLpIO.diff  CoinMP.configure.diff  CoinTypes.hpp.diff  CoinUtils.configure.diff  Osi.configure.diff
patches/gplk/: Makefile_VC  Win_config_VC
patches/kissfft/: CMakeLists.txt
patches/qt/: README.txt  qt4.8.7_build_with_msvc2015.diff
patches/sqlite/: Makefile.msc.patch
patches/wildmagic/: Wm5Assert.cpp.patch  Wm5Assert.h.patch  Wm5CoreLIB.patch  Wm5Vector2.patch
patches/xercesc/: Version_VS11.diff  XercesDefs.hpp.diff
tools/: README_patch.txt
